# linguatics-agents-demo

./: README.md  logging_util.py  main.py  pyproject.toml  sarvam_ai_lang_tools.py
notebooks/: RoughBook.ipynb  Workbook.ipynb
samples/: README.txt  Workbook.ipynb  hindi_questions.txt  kannada_questions.txt  malayalam_questions.txt  tamil_questions.txt  telugu_questions.txt
scripts/: setup.sql
