[project]
name = "linguatics-agents-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.8.0",
    "orchestration-framework",
    "python-dotenv>=1.1.0",
    "sarvamai>=0.1.5",
    "streamlit>=1.45.1",
    "wrapt",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
orchestration-framework = { git = "https://github.com/Snowflake-Labs/orchestration-framework", rev = "tool-args" }

[project.optional-dependencies]
trulens = [
   "trulens>=1.4.5",
    "trulens-connectors-snowflake"
]
